--- a/index.html
+++ b/index.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>brendanchatt</title>
-    <script defer src="script.js"></script>
-	<link rel="stylesheet" href="style.css">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>brendanchatt</title>
+	<script src="typewriter.js"></script>
+	<!-- <script defer src="script.js"></script> -->
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/mobile.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/greeting.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	</head>
-<body onload="onloadBody()">
-	<div class="row">
-		<div id="nav-container" class="column">
-			<div id="nav"> test </div>
+	<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet"><body >
+	<header>
+		<span id="welcome-pre">You have made it to the site of</span>
+		<div id="welcome-banner">
+			Brendan Chatterton, software developer
 		</div>
-		<div id="typewriter-container" class="column" >
-			<div id="typewriter-contents">
-				<img id="headshot" src="default-avatar-photo-placeholder-grey-600nw-2007531536.webp">
-				<div id="greeting">
-					<span id="prefix">$>_&nbsp</span>
-					<span id="greeting-text"></span>
-				</div>		
+		
+			<div class="custom-shape-divider-bottom-1708639076">
+				<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+					<path d="M1200 0L0 0 892.25 114.72 1200 0z" class="shape-fill"></path>
+				</svg>
 			</div>
+	</header>
+
+		<div id="greeting-section" class="part" >
+			<img id="greeting-headshot" src="default-avatar-photo-placeholder-grey-600nw-2007531536.webp">
+			<div id="greeting-container">
+				<span id="greeting-prefix">$>_&nbsp</span>
+				<span id="greeting-text"></span>
+			</div>	
+			<button type="button" id="greeting-skip" onclick="greetingSkip()">Skip typing effect</button>
 		</div>
-		<div id="other" class="column">
-			This is totally the other column I don't know what to do with yet.
-			<div id="skills-list" style="visibility:hidden">
+		<div id="skills" class="part">
+			<h2>You're probably here for some professional interest, so here's a list of some of my skills</h2>
+			<div id="skills-list" style="visibility:shown">
+				<h3>Main 'skills'</h3>
 				List of skills to go here, appearing after fade in animation completed.
 			</div>
 		</div>
+
+
+	<div id="the-rest">
+		<p>
+			This is I guess another row </br>
+			or just the rest of the site.
+		</p>
 	</div>
   </body>
 </html>
