Change banner font and positioning. Move image to header

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>brendanchatt</title>
 	<script src="typewriter.js"></script>
-	<!-- <script defer src="script.js"></script> -->
-	<link rel="stylesheet" href="css/style.css">
+	<script defer src="script.js"></script>
 	<link rel="stylesheet" href="css/mobile.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/greeting.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet"><body >
+	<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+</head>
+<body>
+	<div id="welcome-pre">You have made it to the site of:</div>
 	<header>
-		<span id="welcome-pre">You have made it to the site of</span>
+		<img id="header-headshot" src="default-avatar-photo-placeholder-grey-600nw-2007531536.webp">
 		<div id="welcome-banner">
 			Brendan Chatterton, software developer
 		</div>
@@ -28,7 +31,6 @@
 	</header>
 
 		<div id="greeting-section" class="part" >
-			<img id="greeting-headshot" src="default-avatar-photo-placeholder-grey-600nw-2007531536.webp">
 			<div id="greeting-container">
 				<span id="greeting-prefix">$>_&nbsp</span>
 				<span id="greeting-text"></span>
