Lots of layout rethinking. Obviously change to a robot.

--- a/index.html
+++ b/index.html
@@ -6,44 +6,42 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>brendanchatt</title>
 	<script src="typewriter.js"></script>
-	<script defer src="script.js"></script>
+	<!-- <script defer src="script.js"></script> -->
 	<link rel="stylesheet" href="css/mobile.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/header.css">
-	<link rel="stylesheet" href="css/greeting.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="welcome-pre">You have made it to the site of:</div>
-	<header>
-		<img id="header-headshot" src="default-avatar-photo-placeholder-grey-600nw-2007531536.webp">
-		<div id="welcome-banner">
-			Brendan Chatterton, software developer
+	<div id="top">
+		<div id="pre-text">Welcome to the personal website of:</div>		
+	</div>
+	<div id="stuff">
+		<img id="header-figure" src="Designer-robot.png">
+		<div id="name">
+			BRENDAN CHATTERTON
 		</div>
-		
-			<div class="custom-shape-divider-bottom-1708639076">
-				<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-					<path d="M1200 0L0 0 892.25 114.72 1200 0z" class="shape-fill"></path>
-				</svg>
-			</div>
-	</header>
-
-		<div id="greeting-section" class="part" >
+	</div>
+	<div id="header-section-divider">
+	</div>
+	<div id="greeting-section" >
+		<div id="greeting-wrapper"  >
 			<div id="greeting-container">
 				<span id="greeting-prefix">$>_&nbsp</span>
 				<span id="greeting-text"></span>
 			</div>	
 			<button type="button" id="greeting-skip" onclick="greetingSkip()">Skip typing effect</button>
 		</div>
-		<div id="skills" class="part">
-			<h2>You're probably here for some professional interest, so here's a list of some of my skills</h2>
-			<div id="skills-list" style="visibility:shown">
-				<h3>Main 'skills'</h3>
-				List of skills to go here, appearing after fade in animation completed.
-			</div>
+	</div>
+	<div id="skills" class="part">
+		<h2>You're probably here for some professional interest, so here's a list of some of my skills</h2>
+		<div id="skills-list" style="visibility:shown">
+			<h3>Main 'skills'</h3>
+			List of skills to go here, appearing after fade in animation completed.
 		</div>
+	</div>
 
 
 	<div id="the-rest">
