Added the computer monitor if it wasn't there in the last commit. Made the monitor work responsively

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>brendanchatt</title>
 	<script src="typewriter.js"></script>
-	<!-- <script defer src="script.js"></script> -->
+	<script defer src="script.js"></script>
 	<link rel="stylesheet" href="css/mobile.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/header.css">
@@ -19,7 +19,7 @@
 		<div id="pre-text">Welcome to the personal website of:</div>		
 	</div>
 	<div id="stuff">
-		<img id="header-figure" src="Designer-robot.png">
+		<img id="robot" src="Designer-robot.png">
 		<div id="name">
 			BRENDAN CHATTERTON
 		</div>
@@ -27,7 +27,8 @@
 	<div id="header-section-divider">
 	</div>
 	<div id="greeting-section" >
-		<div id="greeting-wrapper"  >
+		<img src="computer.png" id="monitor">
+		<div id="greeting-wrapper">
 			<div id="greeting-container">
 				<span id="greeting-prefix">$>_&nbsp</span>
 				<span id="greeting-text"></span>
