--- a/index.html
+++ b/index.html
@@ -5,50 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>brendanchatt</title>
-	<script src="typewriter.js"></script>
-	<script defer src="script.js"></script>
+	<script src="js/typewriter.js"></script>
+	<script defer src="js/script.js"></script>
 	<link rel="stylesheet" href="css/mobile.css">
+	<link rel="stylesheet" href="css/desktop.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="top">
-		<div id="pre-text">Welcome to the personal website of:</div>		
-	</div>
-	<div id="stuff">
-		<img id="robot" src="Designer-robot.png">
-		<div id="name">
-			BRENDAN CHATTERTON
+	<div class="container">
+		<img id='selfie' src="IMG_3325.JPG"/>
+		<div id="welcome">
+			Welcome to the peronsal website of </br>
+			<span id="name">Brendan Chatterton</span>
 		</div>
 	</div>
-	<div id="header-section-divider">
-	</div>
-	<div id="greeting-section" >
-		<img src="computer.png" id="monitor">
-		<div id="greeting-wrapper">
-			<div id="greeting-container">
-				<span id="greeting-prefix">$>_&nbsp</span>
-				<span id="greeting-text"></span>
-			</div>	
-			<button type="button" id="greeting-skip" onclick="greetingSkip()">Skip typing effect</button>
-		</div>
-	</div>
-	<div id="skills" class="part">
-		<h2>You're probably here for some professional interest, so here's a list of some of my skills</h2>
-		<div id="skills-list" style="visibility:shown">
-			<h3>Main 'skills'</h3>
-			List of skills to go here, appearing after fade in animation completed.
-		</div>
-	</div>
-
-
-	<div id="the-rest">
-		<p>
-			This is I guess another row </br>
-			or just the rest of the site.
+	<div class="container" id="greeting-container" style="clip-path: polygon(0 100px, 90% 0, 100% 50px, 100% 100%, 0 98%);">
+		<p id="greeting" >
+			&nbsp;Hello, Brendan here. I have been a professional software developer since graduating college in 2014, 
+			where I studied music composition and computer science. Keep scrolling to see the skills I've seasoned my 
+			career with thus far...
 		</p>
 	</div>
   </body>
