Fixed a bunch of basic css issues that were causing overlap and other layout problems.

--- a/index.html
+++ b/index.html
@@ -16,19 +16,31 @@
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<img id='selfie' src="IMG_3325.JPG"/>
-		<div id="welcome">
-			Welcome to the peronsal website of </br>
-			<span id="name">Brendan Chatterton</span>
+	<div class="section" id="welcome-section">
+		<div class="container" >
+			<img id='selfie' src="IMG_3325.JPG"/>
+			<div id="welcome">
+				Welcome to the peronsal website of </br>
+				<span id="name">Brendan Chatterton</span>
+			</div>
 		</div>
 	</div>
-	<div class="container" id="greeting-container" style="clip-path: polygon(0 100px, 90% 0, 100% 50px, 100% 100%, 0 98%);">
-		<p id="greeting" >
-			&nbsp;Hello, Brendan here. I have been a professional software developer since graduating college in 2014, 
-			where I studied music composition and computer science. Keep scrolling to see the skills I've seasoned my 
-			career with thus far...
-		</p>
+	<div class="section" id="greeting-section" style="clip-path: polygon(0 100px, 90% 0, 100% 50px, 100% 100%, 0 98%);">
+		<div class="container"  >
+			<p id="greeting" >
+				Hello, Brendan here. I have been a professional software developer since graduating college in 2014, 
+				where I studied music composition and computer science. Keep scrolling to see the skills I've seasoned my 
+				career with thus far...
+			</p>
+		</div>
+	</div>
+	<div class="section">
+		<div class="container">
+			<div class="skill">Flutter logo</div>
+			<div class="skill">Nodejs logo</div>
+			<div class="skill">MongoDB</div>
+			<div class="skill">.NET</div>
+		</div>
 	</div>
   </body>
 </html>
