Had to change some heights to min-height due to issues on mobile.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</p>
 		</div>
 	</div>
-	<div class="flex-center logo-section" style="height: 60vh">
+	<div class="flex-center logo-section" style="min-height: 60vh">
 		<div class="container">
 			<img src="assets/postgresql-horizontal.svg" />
 			<img src="assets/vuejs-ar21.svg" />
