closing section added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
 		</div>
 	</div>
 	<div class="section flex-center p-section" style="clip-path: polygon(0 100px, 90% 0, 100% 50px, 100% 100%, 0 95%);">
-		<div class="container flex-center">
+		<div class="container">
 			<p>
 				Hello, Brendan here. I have been a professional software developer since graduating college in 2014, 
-				where I studied music composition and computer science. Keep scrolling to see some of the skills I've seasoned my 
+				where I studied music composition and computer science. 
+			</p>
+			<p>
+				Keep scrolling to see some of the skills I've seasoned my 
 				career with thus far...
 			</p>
 		</div>
@@ -48,12 +51,14 @@
 		</div>
 	</div>
 	<div class="section flex-center p-section" id="" style="clip-path: polygon(0 5%, 100% 0, 100% calc(100% - 100px), 10% 100%, 0 95%);">
-		<div class="container flex-center"  >
-			<p id="" >
+		<div class="container"  >
+			<p>
 				As you can see I work on the full stack.  I'm very comfortable solving both front and back end problems.
-				</br>
+			</p>
+			<p>
 				My career has mostly been in leadership of small teams.
-				</br>
+			</p>
+			<p>
 				In addition to these tools that I'm expert in, I would like to share with you the following tools to which
 				I've had some exposure and/or am interested in working with.
 			</p>
@@ -68,12 +73,24 @@
 		</div>
 	</div>
 	<div class="section flex-center p-section" style="clip-path: polygon(0 50px, 10% 0, 100% 100px, 100% 95%, 0 100%);">
-		<div class="container flex-center">
+		<div class="container">
 			<p>
-				My early career was a lot in the C# .NET world.  At present I am upping my front-end web game, especially styling, 
+				My early career was a lot in the C# .NET world.  
+			</p>
+			<p>
+				At present I am upping my front-end web game, especially styling, 
 				as I do have some web dev framework related experience; this website is styled in pure css, and I'm 
 				learning it really does have all I need with less effort.
-				</br>
+			</p>
+		</div>
+	</div>
+	<div class="section flex-center p-section">
+		<div class="container ">
+			<p>
+				This website is a recent development for me; so that's all I have for you for now. 
+			</p>
+			<p>
+				Maybe next time you return there will be more interesting content. Thanks for stopping by!
 			</p>
 		</div>
 	</div>
