headshot replace.  Padding added left and right of paragraph

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="section flex-center" id="welcome-section">
 		<div class="container flex-center" >
-			<img id='selfie' src="assets/selfie.jpg"/>
+			<img id='selfie' src="assets/headshot-porch.png"/>
 			<div id="welcome">
 				Welcome to the peronsal website of </br>
 				<span id="name">Brendan Chatterton</span>
